<resources>
    <string name="app_name">ShortTasks</string>
    <string name="help">Help!</string>
    <string name="source_code">Source \nCode</string>
    <string name="support_us">Support Us</string>
    <string name="app_settings">App \nSettings</string>
    <string name="version_sunray">Version: Sunray</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="bubble_item">bubble_item</string>
    <string name="add_buttons">Bubble Manager</string>
    <string name="add_button">Add Button</string>
    <string name="error">Error</string>
    <string name="city_name">City Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="power_assistant">1. Using ShortTasks with PowerAssistant</string>
    <string name="step_1">step_1</string>
    <string name="step_2">step 2</string>
    <string name="step_3">step 3</string>
    <string name="_1_6_all_done">1.6 All done!</string>
    <string name="_2_1_tap_to_settings_in_shorttasks">2.1 Tap to Bubble Manager in ShortTasks</string>
    <string name="_2_2_tap_to_small_arrow_in_shorttasks_notification">2.2 Tap to small arrow in ShortTasks notification</string>
    <string name="_2_using_shorttasks_with_bubblemanager">2. Using ShortTasks with BubbleManager</string>
    <string name="_2_3_all_done">2.3 All done!</string>
    <string name="change_position">Change <b/>position</string>
    <string name="bubble_manager">Bubble Manager</string>
    <string name="enable">Enable</string>
    <string name="weather_director">Weather Director</string>
    <string name="how_to_change_controls">How to change controls?</string>
    <string name="understand">Understand</string>
    <string name="tap_controls_which_you_want_to_swap">Tap controls which you want to swap</string>
    <string name="how_to_change_city">How to change city?</string>
    <string name="enter_city_name_to_text_field">Enter city name to text field.</string>
    <string name="_1_1_go_to_the_accessibility_in_settings_and_tap_to_shorttasks">1.1 Go to the accessibility in settings and tap to ShortTasks</string>
    <string name="_1_2_tap_use_shorttasks_and_allow_message_in_pop_up"><![CDATA[1.2 Tap <Use ShortTasks> and allow message in pop-up]]></string>
    <string name="_1_3_press_power_button_and_tap_to_device_controls"><![CDATA[1.3 Press Power Button and tap to <Device Controls>]]></string>
    <string name="_1_4_tap_to_shorttasks">1.4 Tap to ShortTasks</string>
    <string name="_1_5_select_controls_which_you_want_and_tap_save_on_the_bottom"><![CDATA[1.5 Select Controls which you want and tap <Save> on the bottom]]></string>
    <string name="how_to_add_your_button">How to add Your button?</string>
    <string name="tap_to_app_which_you_want_n_note_you_can_add_only_one_app">Tap to app which you want. \n Note: you can add only one app.</string>
    <string name="city_for_n_weather">City for \n weather</string>
    <string name="welcome_to_the_colorata_family">Welcome to the Colorata Family!</string>
    <string name="power_assistant_button">Power Assistant</string>
    <string name="shorttasks_is_app_which_created_for_the_big_phones_n_with_this_app_you_can_control_your_device_easier_with_this_app_n_colorata_gives_choice_between_2_methods_of_controlling_your_phone_n_so_select_the_one">ShortTasks is app which created for the big phones. \nWith this app you can control your device easier with this app. \nColorata gives choice between 2 methods of controlling your phone. \nSo, select the one.</string>
    <string name="using_shorttasks_with_bubblemanager">Using ShortTasks with BubbleManager</string>
    <string name="tap_to_bubble_manager_in_shorttasks_or_tap_button_below">Tap to Bubble Manager in ShortTasks or tap button below</string>
    <string name="tap_to_small_bottom_arrow_in_shorttasks_notification">Tap to small bottom arrow in ShortTasks notification</string>
    <string name="all_done">All Done!</string>
    <string name="using_shorttasks_with_powerassistant">Using ShortTasks with PowerAssistant</string>
    <string name="go_to_the_accessibility_settings_or_tap_to_button_below_and_tap_to_shorttasks">Go to the accessibility settings or tap to button below and tap to ShortTasks</string>
    <string name="go">Go!</string>
    <string name="_1_1_go_to_the_accessibility_settings_or_tap_button_below_and_tap_to_shorttasks">1.1 Go to the accessibility settings or tap button below and tap to ShortTasks</string>
    <string name="clear_ndata">Clear \nData</string>
    <string name="allow_restore_defaults_in_shorttasks">Restore defaults?</string>
    <string name="you_willn_t_able_to_recover_your_data_after_that">You willn\'t able to recover your data after that</string>
</resources>