<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Text BUBBLE MANAGER -->
    <TextView
        android:id="@+id/text_bubble_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/change_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/size_title_text"
        android:text="@string/bubble_manager"
        android:layout_margin="@dimen/margin_text"/>

    <!-- Button ENABLE -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/enable"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        app:layout_constraintBottom_toBottomOf="@id/change_position"
        app:layout_constraintEnd_toStartOf="@id/change_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/change_position"
        android:text="@string/enable"/>

    <!-- Button CHANGE POSITION -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cancel_bubble_manager"
        app:layout_constraintEnd_toStartOf="@id/add_button"
        app:layout_constraintStart_toEndOf="@id/enable"
        app:layout_constraintTop_toBottomOf="@id/text_bubble_manager"
        android:text="@string/change_position"/>

    <!-- Button ADD BUTTON -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/height"
        app:layout_constraintBottom_toBottomOf="@id/change_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/change_position"
        app:layout_constraintTop_toTopOf="@id/change_position"
        android:text="@string/add_button"/>

    <!-- Button CANCEL -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_bubble_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_position"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"/>
</androidx.constraintlayout.widget.ConstraintLayout>