<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_layout">

    <!-- Text ALLOW? -->
    <TextView
        android:id="@+id/text_allow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/size_title_text"
        android:text="@string/allow_restore_defaults_in_shorttasks"
        android:textAlignment="center"
        android:layout_margin="10dp"/>

    <!-- Text TAP -->
    <TextView
        android:id="@+id/text_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_willn_t_able_to_recover_your_data_after_that"
        android:textSize="@dimen/size_first"
        android:layout_margin="@dimen/margin_text"
        app:layout_constraintTop_toBottomOf="@id/text_allow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ok_clear"/>

    <!-- Button OK -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_clear"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_clear"
        app:layout_constraintTop_toBottomOf="@id/text_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/ok"/>

    <!-- Button CANCEL -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_clear"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/ok_clear"
        app:layout_constraintTop_toTopOf="@id/ok_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ok_clear"
        android:text="@string/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>