<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Image LOGO -->
    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_logo_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_one_handed_main"
        android:src="@drawable/ic_logo_main_light"
        android:layout_margin="10dp"
        android:contentDescription="@string/logo" />

    <!-- Guideline for ONE-HAND -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_one_handed_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.37"
        android:orientation="horizontal"/>

    <!-- Guideline for LOGO -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_logo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.37"
        android:orientation="vertical"/>

    <!-- Text SHORTTASKS -->
    <TextView
        android:id="@+id/text_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_one_handed_main"
        app:layout_constraintStart_toStartOf="@id/guideline_logo_main"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="40sp"
        android:text="@string/shorttasks"/>

    <!-- Button to CHANGE POSITION -->
    <Button
        android:id="@+id/change_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_one_handed_main"
        android:text="@string/change_position"/>

    <!-- Button to ADD BUTTON -->
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_position"
        android:text="@string/add_buttons"/>

    <!-- Button SETTINGS -->
    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_button"
        android:text="@string/settings"/>

    <!-- Button HELP -->
    <Button
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings"
        android:text="@string/help"/>

    <!-- Button ABOUT -->
    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help"
        android:text="@string/about"/>

</androidx.constraintlayout.widget.ConstraintLayout>