<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_layout">
    <TextView
        android:id="@+id/text_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="40sp"
        android:text="@string/about"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/sourcecode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cancel_version"
        app:layout_constraintEnd_toStartOf="@id/support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_about"
        android:text="@string/source_code"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/support"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/sourcecode"
        app:layout_constraintEnd_toStartOf="@id/version"
        app:layout_constraintStart_toEndOf="@id/sourcecode"
        app:layout_constraintTop_toTopOf="@id/sourcecode"
        android:text="@string/support_us"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/support"
        app:layout_constraintTop_toTopOf="@id/support"
        android:text="@string/version_azure"
        android:layout_margin="10dp"
        android:padding="5dp"/>

    <Button
        android:id="@+id/cancel_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/support"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/cancel"
        android:layout_margin="10dp"
        android:padding="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>