<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/help_layout">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Text HELP -->
    <TextView
        android:id="@+id/text_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/power_assistant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/size_title_text"
        android:text="@string/help"
        android:layout_margin="@dimen/margin_text"/>

    <!-- Text PARAGRAPH 1 -->
    <TextView
        android:id="@+id/power_assistant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/power_assistant"
        android:textSize="@dimen/size_help_paragraph"
        android:layout_margin="@dimen/margin_text"
        app:layout_constraintTop_toBottomOf="@id/text_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Text PARAGRAPH 1_1 -->
    <TextView
        android:id="@+id/power_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/power_assistant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/go_access"
        android:text="@string/_1_1_go_to_the_accessibility_settings_or_tap_button_below_and_tap_to_shorttasks"
        android:textSize="@dimen/size_help_paragraph_small"
        android:layout_margin="@dimen/margin_paragraph_small_horizontal"
        android:layout_marginBottom="@dimen/margin_paragraph_small_bottom"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/power_1"
        app:layout_constraintBottom_toTopOf="@id/image_power_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/go"/>

    <!-- Image PARAGRAPH 1_1 -->
    <ImageView
        android:id="@+id/image_power_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_access"
        app:layout_constraintBottom_toBottomOf="@id/power_2"
        android:src="@drawable/ic_power_assistant_1_light"
        android:contentDescription="@string/step_1"
        android:layout_marginHorizontal="@dimen/margin_help_horizontal"
        android:layout_marginBottom="@dimen/margin_help_bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <!-- Text PARAGRAPH 1_2 -->
    <TextView
        android:id="@+id/power_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_power_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_power_2"
        android:text="@string/_1_2_tap_use_shorttasks_and_allow_message_in_pop_up"
        android:textSize="@dimen/size_help_paragraph_small"
        android:layout_margin="@dimen/margin_paragraph_small_horizontal"
        android:layout_marginBottom="@dimen/margin_paragraph_small_bottom"/>

    <!-- Image PARAGRAPH 1_2 -->
    <ImageView
        android:id="@+id/image_power_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_2"
        app:layout_constraintBottom_toBottomOf="@id/power_3"
        android:src="@drawable/ic_power_assistant_2_light"
        android:contentDescription="@string/step_2"
        android:layout_marginHorizontal="@dimen/margin_help_horizontal"
        android:layout_marginBottom="@dimen/margin_help_bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <!-- Text PARAGRAPH 1_3 -->
    <TextView
        android:id="@+id/power_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_power_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_power_3"
        android:text="@string/_1_3_press_power_button_and_tap_to_device_controls"
        android:textSize="@dimen/size_help_paragraph_small"
        android:layout_margin="@dimen/margin_paragraph_small_horizontal"
        android:layout_marginBottom="@dimen/margin_paragraph_small_bottom"/>

    <!-- Image PARAGRAPH 1_3 -->
    <ImageView
        android:id="@+id/image_power_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_3"
        app:layout_constraintBottom_toBottomOf="@id/power_4"
        android:src="@drawable/ic_power_assistant_3"
        android:contentDescription="@string/step_3"
        android:layout_marginHorizontal="@dimen/margin_help_horizontal"
        android:layout_marginBottom="@dimen/margin_help_bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <!-- Text PARAGRAPH 1_4 -->
    <TextView
        android:id="@+id/power_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_power_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_power_4"
        android:text="@string/_1_4_tap_to_shorttasks"
        android:textSize="@dimen/size_help_paragraph_small"
        android:layout_margin="@dimen/margin_paragraph_small_horizontal"
        android:layout_marginBottom="@dimen/margin_paragraph_small_bottom"/>

    <!-- Image PARAGRAPH 1_4 -->
    <ImageView
        android:id="@+id/image_power_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_4"
        app:layout_constraintBottom_toBottomOf="@id/power_5"
        android:src="@drawable/ic_power_assistant_4"
        android:contentDescription="@string/step_3"
        android:layout_marginHorizontal="@dimen/margin_help_horizontal"
        android:layout_marginBottom="@dimen/margin_help_bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <!-- Text PARAGRAPH 1_5 -->
    <TextView
        android:id="@+id/power_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_power_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_power_5"
        android:text="@string/_1_5_select_controls_which_you_want_and_tap_save_on_the_bottom"
        android:textSize="@dimen/size_help_paragraph_small"
        android:layout_margin="@dimen/margin_paragraph_small_horizontal"
        android:layout_marginBottom="@dimen/margin_paragraph_small_bottom"/>

    <!-- Image PARAGRAPH 1_5 -->
    <ImageView
        android:id="@+id/image_power_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_5"
        app:layout_constraintBottom_toBottomOf="@id/power_6"
        android:src="@drawable/ic_power_assistant_5"
        android:contentDescription="@string/step_3"
        android:layout_marginHorizontal="@dimen/margin_help_horizontal"
        android:layout_marginBottom="@dimen/margin_help_bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <!-- Text PARAGRAPH 1_6 -->
    <TextView
        android:id="@+id/power_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_power_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_power_6"
        android:text="@string/_1_6_all_done"
        android:textSize="@dimen/size_help_paragraph_small"
        android:layout_margin="@dimen/margin_paragraph_small_horizontal"
        android:layout_marginBottom="@dimen/margin_paragraph_small_bottom"/>

    <!-- Image PARAGRAPH 1_6 -->
    <ImageView
        android:id="@+id/image_power_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/power_6"
        app:layout_constraintBottom_toBottomOf="@id/bubble_manager"
        android:src="@drawable/ic_power_assistant_6"
        android:contentDescription="@string/step_3"
        android:layout_marginHorizontal="@dimen/margin_help_horizontal"
        android:layout_marginBottom="@dimen/margin_help_bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <!-- Text PARAGRAPH 2 -->
    <TextView
        android:id="@+id/bubble_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2_using_shorttasks_with_bubblemanager"
        android:textSize="@dimen/size_help_paragraph"
        android:layout_margin="@dimen/margin_text"
        app:layout_constraintTop_toBottomOf="@id/image_power_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Text PARAGRAPH 2_1 -->
    <TextView
        android:id="@+id/bubble_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bubble_manager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/enable_help"
        android:text="@string/_2_1_tap_to_settings_in_shorttasks"
        android:textSize="@dimen/size_help_paragraph_small"
        android:layout_margin="@dimen/margin_paragraph_small_horizontal"
        android:layout_marginBottom="@dimen/margin_paragraph_small_bottom"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enable_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bubble_1"
        app:layout_constraintBottom_toTopOf="@id/image_bubble_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/enable"/>

    <!-- Image PARAGRAPH 2_1 -->
    <ImageView
        android:id="@+id/image_bubble_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enable_help"
        app:layout_constraintBottom_toBottomOf="@id/bubble_2"
        android:src="@drawable/ic_bubble_manager_1_light"
        android:contentDescription="@string/step_3"
        android:layout_marginHorizontal="@dimen/margin_help_horizontal"
        android:layout_marginBottom="@dimen/margin_help_bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <!-- Text PARAGRAPH 2_2 -->
    <TextView
        android:id="@+id/bubble_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_bubble_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_bubble_2"
        android:text="@string/_2_2_tap_to_small_arrow_in_shorttasks_notification"
        android:textSize="@dimen/size_help_paragraph_small"
        android:layout_margin="@dimen/margin_paragraph_small_horizontal"
        android:layout_marginBottom="@dimen/margin_paragraph_small_bottom"/>

    <!-- Image PARAGRAPH 2_2 -->
    <ImageView
        android:id="@+id/image_bubble_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bubble_2"
        app:layout_constraintBottom_toBottomOf="@id/bubble_3"
        android:src="@drawable/ic_bubble_manager_2_light"
        android:contentDescription="@string/step_3"
        android:layout_marginHorizontal="@dimen/margin_help_horizontal"
        android:layout_marginBottom="@dimen/margin_help_bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <!-- Text PARAGRAPH 2_3 -->
    <TextView
        android:id="@+id/bubble_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_bubble_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_bubble_3"
        android:text="@string/_2_3_all_done"
        android:textSize="@dimen/size_help_paragraph_small"
        android:layout_margin="@dimen/margin_paragraph_small_horizontal"
        android:layout_marginBottom="@dimen/margin_paragraph_small_bottom"/>

    <!-- Image PARAGRAPH 2_3 -->
    <ImageView
        android:id="@+id/image_bubble_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bubble_3"
        app:layout_constraintBottom_toTopOf="@id/cancel_help"
        android:src="@drawable/ic_bubble_manager_3_light"
        android:contentDescription="@string/step_3"
        android:layout_marginHorizontal="@dimen/margin_help_horizontal"
        android:layout_marginBottom="@dimen/margin_help_bottom"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <!-- Button CANCEL -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_help"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_bubble_3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/understand"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>