<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/about_layout">

    <!-- Text HOW TO CHANGE -->
    <TextView
        android:id="@+id/text_how_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_tap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/size_title_text"
        android:text="@string/how_to_change_controls"
        android:textAlignment="center"
        android:layout_margin="10dp"/>

    <!-- Text TAP -->
    <TextView
        android:id="@+id/text_tap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tap_controls_which_you_want_to_swap"
        android:textSize="@dimen/size_first"
        android:layout_margin="@dimen/margin_text"
        app:layout_constraintTop_toBottomOf="@id/text_how_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/understand_first_change"/>

    <!-- Button UNDERSTAND -->
    <Button
        android:id="@+id/understand_first_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tap"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/understand"/>

</androidx.constraintlayout.widget.ConstraintLayout>